--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.diegoribeiro</groupId>
-    <artifactId>javafx-ws</artifactId>
+    <artifactId>workshop-javafx-jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>javafx-ws</name>
 
